RESOLVED FIXED28083
[V8] Fix the problem that isAttribute is set to false for onerror and onmessage in worker custom code.
https://bugs.webkit.org/show_bug.cgi?id=28083
Summary [V8] Fix the problem that isAttribute is set to false for onerror and onmessa...
Jian Li
Reported 2009-08-07 13:32:29 PDT
Fix the problem that isAttribute is set to false for onerror and onmessage in worker custom code.
Attachments
Proposed Patch (6.47 KB, patch)
2009-08-07 13:39 PDT, Jian Li
dglazkov: commit-queue+
Jian Li
Comment 1 2009-08-07 13:39:40 PDT
Created attachment 34320 [details] Proposed Patch
Dimitri Glazkov (Google)
Comment 2 2009-08-07 13:48:19 PDT
Comment on attachment 34320 [details] Proposed Patch Wow, good catch. r=me.
Adam Barth
Comment 3 2009-08-07 16:13:05 PDT
Comment on attachment 34320 [details] Proposed Patch Clearing review flag on attachment: 34320 Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/bindings/v8/custom/V8AbstractWorkerCustom.cpp M WebCore/bindings/v8/custom/V8WorkerContextCustom.cpp M WebCore/bindings/v8/custom/V8WorkerCustom.cpp Committed r46922 M WebCore/ChangeLog M WebCore/bindings/v8/custom/V8WorkerCustom.cpp M WebCore/bindings/v8/custom/V8WorkerContextCustom.cpp M WebCore/bindings/v8/custom/V8AbstractWorkerCustom.cpp r46922 = 12e5c15a8427d9e3578e6eea9cf483696beb9dee (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/46922
Adam Barth
Comment 4 2009-08-07 16:13:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.