WebCore/bindings/v8/custom/V8AbstractWorkerCustom.cpp
@@ -45,18 +45,18 @@
 
 namespace WebCore {
 
-PassRefPtr<EventListener> getEventListener(AbstractWorker* worker, v8::Local<v8::Value> value, bool findOnly)
+PassRefPtr<EventListener> getEventListener(AbstractWorker* worker, v8::Local<v8::Value> value, bool isAttribute, bool findOnly)
 {
     if (worker->scriptExecutionContext()->isWorkerContext()) {
         WorkerContextExecutionProxy* workerContextProxy = WorkerContextExecutionProxy::retrieve();
         ASSERT(workerContextProxy);
-        return workerContextProxy->findOrCreateObjectEventListener(value, false, findOnly);
+        return workerContextProxy->findOrCreateObjectEventListener(value, isAttribute, findOnly);
     }
 
     V8Proxy* proxy = V8Proxy::retrieve(worker->scriptExecutionContext());
     if (proxy) {
         V8EventListenerList* list = proxy->objectListeners();
-        return findOnly ? list->findWrapper(value, false) : list->findOrCreateWrapper<V8ObjectEventListener>(proxy->frame(), value, false);
+        return findOnly ? list->findWrapper(value, isAttribute) : list->findOrCreateWrapper<V8ObjectEventListener>(proxy->frame(), value, isAttribute);
     }
 
     return 0;
@@ -88,7 +88,7 @@ ACCESSOR_SETTER(AbstractWorkerOnerror)
         // Clear the listener.
         worker->setOnerror(0);
     } else {
-        RefPtr<EventListener> listener = getEventListener(worker, value, false);
+        RefPtr<EventListener> listener = getEventListener(worker, value, true, false);
         if (listener) {
             if (oldListener) {
                 v8::Local<v8::Object> oldV8Listener = oldListener->getListenerObject();
@@ -106,7 +106,7 @@ CALLBACK_FUNC_DECL(AbstractWorkerAddEventListener)
     INC_STATS(L"DOM.AbstractWorker.addEventListener()");
     AbstractWorker* worker = V8DOMWrapper::convertToNativeObject<AbstractWorker>(V8ClassIndex::ABSTRACTWORKER, args.Holder());
 
-    RefPtr<EventListener> listener = getEventListener(worker, args[1], false);
+    RefPtr<EventListener> listener = getEventListener(worker, args[1], false, false);
     if (listener) {
         String type = toWebCoreString(args[0]);
         bool useCapture = args[2]->BooleanValue();
@@ -122,7 +122,7 @@ CALLBACK_FUNC_DECL(AbstractWorkerRemoveEventListener)
     INC_STATS(L"DOM.AbstractWorker.removeEventListener()");
     AbstractWorker* worker = V8DOMWrapper::convertToNativeObject<AbstractWorker>(V8ClassIndex::ABSTRACTWORKER, args.Holder());
 
-    RefPtr<EventListener> listener = getEventListener(worker, args[1], true);
+    RefPtr<EventListener> listener = getEventListener(worker, args[1], false, true);
     if (listener) {
         String type = toWebCoreString(args[0]);
         bool useCapture = args[2]->BooleanValue();
